# bevy_starfield

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: starfield_shader.wgsl
examples/: cube.rs
src/: _astro.rs  lib.rs  shader.wgsl  starfield_shader.wgsl
