[package]
name = "bevy_starfield"
description = "A procedural night sky plugin for bevy"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_starfield"
homepage = "https://github.com/fintelia/bevy_starfield"
repository = "https://github.com/fintelia/bevy_starfield"
exclude = ["/examples/", "/.github/"]

[dependencies]
bevy = "0.10.1"
bytemuck = "1.13.1"
