[package]
name = "bevy_starfield"
description = "A random night sky plugin for bevy"
version = "0.2.0"
edition = "2021"
authors = ["Caleb Yates <calebyates42@gmail.com>", "Jonathan Behrens <fintelia@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_starfield"
homepage = "https://github.com/ActuallyHappening/bevy_starfield"
repository = "https://github.com/ActuallyHappening/bevy_starfield"
exclude = ["/examples/", "/.github/"]

[dependencies]
bevy = "0.12.1"
bytemuck = "*"
rand = "0.8.5"
rng = "0.1.0"
